--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="login">Logi sisse</string>
     <string name="unustatud">Unustasid salasõna?</string>
     <string name="registreeri">Registreeri kasutajaks</string>
-    <string name="katsed">Katse</string>
+    <string name="katsed">Katseid on jäänud veel</string>
 </resources>
