--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="unustatud">Unustasid salasõna?</string>
     <string name="registreeri">Registreeri kasutajaks</string>
     <string name="katsed">Katseid on jäänud veel</string>
+    <string name="lähtesta">Lähtesta parool</string>
+    <string name="eesnimi">Eesnimi</string>
+    <string name="perenimi">Perekonnanimi</string>
+    <string name="register">Registreeri</string>
 </resources>
